--- a/1224.html
+++ b/1224.html
@@ -1,11 +1,11 @@
 <!dotype html>
 <html lang="ko">
-  <head>
-    <title>Git수업1</title>
-  </head>
+
   <body>
       <header>
-          <h1>GIT설명</h1>
+          <h1>GIT설명ㅋ</h1>
       </header>
+      <ul>
+      </ul>
   </body>
 </html>
