--- a/1224.html
+++ b/1224.html
@@ -6,6 +6,8 @@
           <h1>GIT설명ㅋ</h1>
       </header>
       <ul>
+        <li>GIT이란?</li>
+        <li>버전</li>
       </ul>
   </body>
 </html>
