--- a/1224.html
+++ b/1224.html
@@ -1,7 +1,7 @@
 <!dotype html>
 <html lang="ko">
   <head>
-    <title>Git수업(head태그추가)</title>
+    <title>Git수업(head태그추가)2</title>
   </head>
   <body>
       <header>
